--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="close">Close</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="do_not_have_a_account_create_new">Do not have a account ? <u>Create new</u></string>
+    <string name="already_have_an_account_sign_in">Already have an account ? <u>Sign in</u></string>
 </resources>
