design & activity update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,92 @@
     <string name="close">Close</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="do_not_have_a_account_create_new">Do not have a account ? <u>Create new</u></string>
-    <string name="already_have_an_account_sign_in">Already have an account ? <u>Sign in</u></string>
+    <string name="do_not_have_a_account_create_new">আপনার একাউন্ট নাই ? <u>নতুুন একাউন্ট তেরি করুন</u></string>
+    <string name="already_have_an_account_sign_in">আপনার কি একাউন্ট আছে ? <u>লগ ইন করুন</u></string>
+
+
+    <!-- danRogbalai  -->
+
+    <string name="dan_badamiRog">
+       <b> রোগের নামঃ</b> \n
+ধানের বাদামী রোগ Brown Spot Disease (Helminthosporium oryzae) \n
+<b> লক্ষণঃ </b>\n
+        	এটি বীজ বাহিত রোগ।
+	এ রোগ পাতা, বীজ ও বাড়ন্ত কান্ডে আক্রমণ করে।
+	পাতায় ডিম্বকৃতির মতে ছোট ছোট বাদামী রঙের দাগ পড়ে।
+	দাগগুলি ক্রমেই পাতায় ছড়িয়ে পড়ে , আক্রমণ বেশী হলে শীষেও আক্রমন হয়। \n
+
+<b> সমন্বিত দমন ব্যবস্থাপনাঃ</b>  v
+ফসল কাটার পর নাড়া পুড়িয়ে ফেলা। সুস্থ বীজ ব্যবহার করা। বীজ গরম পানিতে শোধন করা বা প্রোভেবা ভিটাফ্লো ২০০ (২.৫-৩ গ্রাম/কেজি বীজ) দ্বারা বীজ শোধন।
+রোগ প্রতিরোধ সম্পন্ন জাত ব্যবহার। বীজতলা বা জমি সব সময় ভেজা রাখা। জমিতে পর্যাপ্ত পরিমাণ ইউরিয়া ও পটাশ ব্যবহার করলে রোগ বাড়ে না।
+    </string>
+
+
+    <string name="dan_tonkrorRog"> <b>  রোগের নামঃ </b>
+        \n
+ধানের টুংরো রোগ Tungro Disease of Rice (ভাইরাসজনিত রোগ)। টুংরো (Tungro)। অনেক এলাকায় এ রোগকে লোনা ধরা, বসে যাওয়া, লাল হয়ে যাওয়া ইত্যাদি বলে উল্লেখ করা হয়ে থাকে।
+        \n
+<b> লক্ষণঃ</b>  \n
+	চারা অবস্থায় এ রোগের আক্রমণ শুরু হয়।  \n   	আক্রান্ত পাতায় লম্বালম্বি শিরা বরাবর হালকা সবুজ বা হালকা হলুদ রঙের রেখা দেখা যায়।\n 	ক্রমেই তা ছড়িয়ে পড়ে এবং সম্পূর্ণ পাতা হলুদ বর্ণের খাটো গাছ দেখা যায়।\n
+	জমিতে বিক্ষিপ্তভাবে কমলা-হলুদ বা হলুদ বর্ণের খাটো গাছ দেখা যায়।\n	ক্ষেতে বাহক পোকা সবুজ পাতা ফড়িং এর উপস্থিতি দেখা যায়।\n 	আক্রান্ত গাছের শিকড় দূর্বল হয় এবং গাছ টান দিলে সহজেই উঠে আসে।
+        \n
+<b> সমন্বিত দমন ব্যবস্থাপনাঃ</b>
+        \n
+ রোগ প্রতিরোধ ক্ষমতা সম্পন্ন ধানের জাত ব্যবহার করা যথাঃ <br> বিআর- ১০,১১,১৪,১৬,২০,২২ এবং ব্রিধান- ২৪,৩৬,৩৭,৩৯,৪১। </br>
+         রোগাক্রান্ত গাছ, বাওয়া ধান এবং আড়ালি ঘাস দমন করতে হবে। আলোকফাঁদ ব্যবহার করে সবুজ পাতাফড়িং মেরে ফেলতে হবে। জমিতে বাঁশের কঞ্চি পুঁতে পার্চিং করতে হবে। বাহক পোকা দমনের জন্য ইমিডাক্লোরোপিড (অ্যাডমায়ার/ইমিটাফ) ০.৫ মিলি/লিটার অথবা ডায়াজিনন (৬০ তরল) ১.৫ মিলি/লিটার হারে পানিতে মিশিয়ে  স্প্রে করতে হবে।
+    </string>
+
+    <string name="dan_kholpuraRog">
+   <b>রোগের নামঃ </b> \n
+ধানের খোল পচা রোগ Sheath Rot Disease (Cerocladium oryzae) \n
+<b> লক্ষণঃ</b>  \n
+এ রোগ ধান গাছের ডিগ পাতার খোলে সাধারণত থোড় অবস্থায দেখা যায়।প্রথমে খোলে ছোট ছোট নানা আকারের বাদামী দাগ হয়।দাগগুলো আস্তে আস্তে বেড়ে একত্রে মিশে সমস্ত খোলে ছড়িয়ে পড়ে।
+    এ অবস্থায় যদি শীষ বের হয় তাহরে ধান চিটা ও অপুষ্ট হয়। অনেক সময় শীষ অর্ধেক বের হতে পারে বা একবারেই বের হতে পারে না। \n
+<b> সমন্বিত দমন ব্যবস্থাপনাঃ </b>  \n
+রোগ প্রতিরোধ ক্ষমতা সম্পন্ন জাত ব্যবহার করা।
+জমিতে ইউরিয়া সার কম ব্যবহার করা।
+রোগ দেখা দিলে জমির পানি শুকিয়ে কয়েকদিন পর আবার সেচের পানি দেয়া।
+প্রয়োজনের ছত্রাকনাশক ব্যবহার করা যথাঃ ১ মিলি প্রোপিকোনাজল (টিল্ট ২৫০ ইসি) বা নাটিভো, বা কনটাফ প্রতি লিটার পানিতে – এ হারে স্প্রে করা।
+</string>
+
+    <!-- ধান চাষের পদ্ধতি -->
+
+    <string name="danchasProkrian">
+          বাংলাদেশের জলবায়ু ধান চাষাবাদের জন্য খুবই উপযোগী হওয়ায় এটি এদেশের একটি প্রাচীনতম ফসল হিসেবে পরিচিত। বর্তমানে বাংলাদেশ ধান উৎপাদনে চতুর্থ বৃহত্তম। ধানই এদেশের প্রধান খাদ্য শস্য। ধানের ইংরেজি নাম Rice এবং বৈজ্ঞানিক নাম Oryza sativa।
+       <b>\n বীজ বাছাই </b>  \n
+বপনের জন্য রোগমুক্ত, পরিষ্কার, পরিপুষ্ট বীজ ব্যবহার নিশ্চিত করতে হবে। কারণ ভাল বীজ মানে সবল চারা। আর রোগাক্রান্ত চিটা থেকে বীজতলায় সহজেই রোগ ছড়ায়। তাই মানসম্পন্ন বীজ ব্যবহারের লক্ষ্যে ভালভাবে বীজ বাছাইয়ের জন্য নিম্নবর্ণিত পদ্ধতি অনুসরণ করতে হবে। বীজ বাছাইয়ের জন্য প্রায় ৪০ লিটার পরিষ্কার পানিতে দেড় কেজি ইউরিয়া সার মিশিয়ে দিন। এবার ৪০ কেজি বীজ ছেড়ে হাত দিয়ে নেড়েচেড়ে দিন।
+ভারী, পুষ্ট, সুস্থ্য ও সবল বীজ ডুবে নিচে জমা হবে এবং অপরিপুষ্ট, হালকা, রোগ বা ভাঙ্গা বীজ ভেসে উঠবে। হাত অথবা চালনি দিয়ে ভাসমান বীজগুলো পৃথক করে নিন। ভারী বীজ নিচ থেকে তুলে নিয়ে পরিস্কার পানিতে ৩-৪ বার ভাল করে ধুয়ে নিতে হবে। ইউরিয়া মিশানো পানি সার হিসেবে বীজতলায় ব্যবহার করা যায়। কুলা দিয়ে ঝেড়ে বীজ বাছাই পদ্ধতি প্রচলিত আছে। এতে চিটা দূর হলেও অপরিপুষ্ট বীজ দূরীভুত হয় না।
+<b>\n  বীজতলা তৈরি</b> \n
+        <b> শুকনো বীজতলা </b> \n
+উপযুক্ত আর্দ্রতায় ৫-৬ বার চাষ ও মই দিয়ে মাটিকে একেবারে ঝুরঝুরে করার পর জমি সমান করে শুকনো বীজতলা তৈরি করা যায়। এবার চারাগাছের পরবর্তী পরিচর্যা ও বৃষ্টির পানি নিষ্কাশনের জন্য ২৫-৩০ সেন্টিমিটার চওড়া নালা তৈরি হবে। বেডের উপরি ভাগের মাটি ভালোভাবে সমান করার পর শুকনো বীজ সমানভাবে ছিটিয়ে দিন। এরপর উপরের মাটি এমনভাবে নাড়াচাড়া করতে হবে যেন বীজগুলো ২.৫-৪.০ সেন্টিমিটার (১.০-১.৫ ইঞ্চি)মাটির নিচে চলে যায়। এ কাজকে সহজ করতে ধুলা মাটির আস-রণ দেওয়া যায়। বেডের মাটিতে প্রয়োজনীয় আর্দ্রতা নিশ্চিত করার জন্য নালা ভর্তি করে সেচ দেয়া উচিত।
+<b>\n কাদাময় বীজতলা- </b> \n
+ দোঁআশ ও এটেল মাটি এ বীজতলায় জন্য ভাল। আরেকটি কথা, বীজতলার জমি উর্বর হওয়া প্রয়োজন। যদি জমি হয় তাহলে প্রতি বর্গমিটার জমিতে দুই কেজি হারে জৈব সার (পচা গোবর বা আবর্জনা) সুন্দরভাবে ছড়িয়ে দিতে হবে। এরপর জমিতে ৫-৬ সেন্টিমিটার পানি দিয়ে দু-তিনটি চাষ ও মই দিয়ে ৭ থেকে ১০ দিন রেখে দিন এবং পানি ভালভাবে আটকে রাখুন।
+এবার জমির দৈর্ঘ্য বরাবর ১ মিটার চওড়া বেড তৈরি করতে হবে।  এ অবস্থায় বেড তৈরির পৌনে এক ঘন্টা পর বীজ বোনা দরকার। উল্লেখ্য যে, বীজতলা তৈরির জন্য দুই বেডের মাঝে যে নালা তৈরি হলো তা খুবই প্রয়োজন। এ নালা যেমন সেচের কাজে লাগবে তেমনি প্রয়োজনে পানি নিষ্কাশন ও বীজতলার পরিচর্যা করা সহজ হয়।
+<b> \n রোপণের জন্য জমি তৈরি :  </b>
+ জমিতে হেক্টরপ্রতি ৩-৫ টন পরিমাণ জৈব সার ভালভাবে ছিটিয়ে দিন। এখন ৫-১০ সেন্টিমিটার পানি দিয়ে দুটি চাষ আড়াআড়িভাবে দিয়ে ৭-৮ দিন অপেক্ষা করতে হবে। এবার ১০-১৫ সেন্টিমিটার গভীর করে আড়াআড়িভাবে দুটি চাষ ও দুটি মই দিয়ে ৩-৪ দিন অপেক্ষা করতে হবে। এরপর দিতে হবে শেষ চাষ।
+        <b>\n  চারা রোপণ</b> \n
+চারার বয়স- ভাল ফলন পেতে হলে উপযুক্ত বয়সের চারা রোপণ করা জরুরি। তালিকা ২ তে জাত ও মৌসুম ভেদে চারার বয়স উল্লেখ করা হয়েছে। সাধারণভাবে আউশে ২০-২৫ দিন, রোপা আমনে ২৫-৩০ দিন এবং বোরাতে ৩৫-৪৫ দিন হওয়া উচিত।
+        <b>\n রোপণের নিয়ম- </b>
+রোপণের সময় জমিতে ছিপছিপে পনি থাকলে চলে। প্রতি গুছিতে ২-৩ টি চারা রোপণ করা ভাল। মাটির ২-৩ সেন্টিমিটার গভীরতায় চারা রোপণ করা উত্তম। সঠিক গভীরতায় চারা রোপণ করলে চারার বৃদ্ধি দ্রুত হয় এবং কুশির সংখ্যা বেশি হয়।
+        <b>\n চারা রোপণের দূরত্ব- </b> সারিবদ্ধ ভাবে চারা রোপণ করতে হবে। সারি থেকে সারির দূরত্ব এবং প্রতি সারিতে গাছ থেকে গাছের দূরত্ব বজায় রাখতে হবে ।
+       </string>
+
+    <string name="gom_chas">
+ বাংলাদেশে উৎপাদন ও খাদ্যের দিক দিয়ে দানা ফসল হিসেবে গম ২য় স্থানে রয়েছে। অর্থাৎ ধানের পরেই গমের স্থান। স্থানীয় জাতের তুলনায় উচ্চ ফলনশীল জাতের ফসল প্রায় তিন গুণ বেশি হওয়ায় বর্তমানে গম উৎপাদনে বিপুল উৎসাহ সৃষ্টি হচ্ছে। বর্তমানে ৪.৫৩ লক্ষ হেক্টর জমিতে গমের উৎপাদন ১৩.৭৫ লক্ষ মেট্রিক টন। গমের হেক্টর প্রতি গড় ফলন ৩.০৪ টন যা বাংলাদেশের গম চাষের ক্ষেত্রে একটি মাইল ফলক।
+<b>\n মাটির প্রকৃতিঃ</b> \n
+উঁচু ও মাঝারি দো-আঁশ মাটি গম চাষের জন্য বেশি উপযোগী৷ লোনা মাটিতে গমের ফলন কম হয় ৷ সাধারণত উঁচু ও মাঝারি উঁচু জমি গম চাষের জন্য উপযুক্ত ৷ তবে মাঝারি নিচু জমিতেও গম চাষ হয় ৷ দোঁআশ ও বেলে-দোঁআশ মাটি গম চাষের জন্য সর্বোত্তম ৷
+  <b>\n  জাত নির্বাচন :</b> \n ভালো ফলনের জন্য নতুন উদ্ভাবিত উচ্চ ফলনশীল জাতগুলোই নির্বাচন করা উচিত। বারি গম ১৯ (সৌরভ), বারি গম ২০ (গৌরব), বারি গম ২১ (শতাব্দী), বারি গম ২২ (সুফি), বারি গম ২৩ (বিজয়),বারি গম ২৪ (প্রদীপ)- এই জাতগুলো হলো তাপসহিষ্ণু ও উচ্চফলনশীল জাত। এছাড়াও বারি গম ২৫ হলো লবনাক্ততাসহিষ্ণু, তাপসহিষ্ণু ও উচ্চফলনশীল জাত, বারি গম ২৬ হলো উচ্চফলনশীল ও তাপসহিষ্ণু জাত। এটি পাতার দাগ রোগ সহনশীল ও পাতার মরিচা রোগ প্রতিরোধী জাত। বারি গম ২৭ একটি উচ্চ ফলনশীল স্বল্পমেয়াদি গমের জাত, যা পাতার দাগ রোগ প্রতিরোধী। বারি গম ২৮ হলো স্বল্পমেয়াদি উচ্চ ফলনশীল গমের জাত। বারি গম ২৯ একটি তাপ সহনশীল উচ্চ ফলনশীল গমের জাত। বারি গম ৩০ হলো তাপসহিষ্ণু ও উচ্চফলনশীল গমের জাত, যা পাতার দাগ রোগ সহনশীল ও পাতার মরিচা রোগ প্রতিরোধী জাত।
+<b> \nবপনের সময়ঃ</b> গম বপনের সময় উপযুক্ত সময় হলো অগ্রহায়ণের মাসের ১ম থেকে ২য় সপ্তাহ পর্যন্ত ( নভেম্বর মাসের ১৫ থেকে ৩০ পর্যন্ত )। তবে তাপ সহনশীল জাত ডিসেম্বার মাসের ১৫-২০ তারিখের মধ্যে বুনলেও অন্যান্য জাতের তুলনায় বেশি ফলন দেয়। যেসব এলাকায় ধান কাটতে ও জমি তৈরী করতে বিলম্ব হয় সে ক্ষেত্রে  কাঞ্চন, আকবর , অঘ্রাণী, ও গৌরব বপন করলে ভাল ফলন পাওয়া যায়।
+
+<b>\n বীজের হারঃ </b>হেক্টর প্রতি ১২০ কেজি বীজ ব্যবহার করতে হবে। বীজ গজানোর ক্ষমতা ৮০% এর বেশী  হলে ভালো হয়।
+
+<b>\n বীজ শোধনঃ </b> প্রোভেক্স/ভিটাভেক্স ২০০ প্রতি কেজি বীজে ৩ গ্রাম হারে মিশিয়ে বীজ শোধন করতে হবে। বীজ শোধনের ফলে চারা সবল ও সতেজ হয় এবং গম গজানোর হার ও ফলন বৃদ্ধি পায়। বীজ শোধন করলে শতকরা ১০-১২ কেজি বৃদ্ধি পায়।
+<b>\nবপন পদ্ধতিঃ   </b> সারিতে বা ছিটিয়ে গম বীজ বপন করা যায়। সারিতে বপনের জন্য জমি তৈরীর পর লাংগল দিয়ে সরু নালা তৈরী করে ২০ সেমি বা ৮ ইঞ্চি  দূরে দূরে সারিতে এবং ৪-৫ সেমি গভীরে বীজ বপন করতে হবে।
+<b>\nসারের পরিমাণ ও প্রয়োগ পদ্ধতিঃ </b> সেচ সহ চাষের ক্ষেত্রে নির্ধারিত  ইউরিয়া সারের দুই তৃতীয়াংশ এবং সম্পূর্ন টিএসপি, এমপি ও জিপসাম শেষ চাষের পূর্বে প্রয়োগ করে মাটির সাথে মিশিয়ে দিতে  হবে। বাকী এক তৃতীয়াংশ ইউরিয়া চারার তিন পাতা বয়সে প্রথম সেচের পর দুপুর বেলা মাটি ভেজা থাকা অবস্থায় প্রতি হেক্টরে ৬০-৭০ কেজি ইউরিয়া উপরি প্রয়োগ করতে হবে।
+
+      <b> \n  রোগের প্রতিকার </b>
+ -ফসল সংগ্রহের পর ফসলের পরিত্যক্ত অংশ পৃড়িয়ে ফেলতে হবে অথবা মাটিতে পুতে রাখতে হবে। \n -রোগ প্রতিরোধী জাত চাষ করতে হবে। \n -কার্বেন্ডাজিম (অটোস্টিন) অথবা কার্বোক্সিন + থিরাম (প্রোভ্যাক্স ২০০ ডব্লিউপি) প্রতি কেজি বীজে ২.৫ গ্রাম হারে মিশিয়ে বীজ শোধন করে বপন করতে হবে। \n -সুষম সার প্রয়োগ, সেচ ও জমির আগাছা দমন করতে হবে। \n -আগাম চাষ অর্থাৎ নভেম্বরের প্রথম সপ্তাহে বীজ বপন করলে রোগের মাত্রা কম হবে। \n -রোগ দেখা দেয়ার সাথে সাথে প্রোপিকোনাজোল (টিল্ট ২৫০ ইসি) প্রতি লিটার পানিতে ০.৫ মিলি হারে অথবা টেবুকোনাজল (ফলিকুর ২৫০ ইসি) প্রতি লিটার পানিতে ১ মিলি হারে মিশিয়ে ১০ দিন পর পর ২-৩ বার স্প্রে করতে হবে।
+    </string>
+
+
 </resources>
