--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,7 @@
       <b> \n  রোগের প্রতিকার </b>
  -ফসল সংগ্রহের পর ফসলের পরিত্যক্ত অংশ পৃড়িয়ে ফেলতে হবে অথবা মাটিতে পুতে রাখতে হবে। \n -রোগ প্রতিরোধী জাত চাষ করতে হবে। \n -কার্বেন্ডাজিম (অটোস্টিন) অথবা কার্বোক্সিন + থিরাম (প্রোভ্যাক্স ২০০ ডব্লিউপি) প্রতি কেজি বীজে ২.৫ গ্রাম হারে মিশিয়ে বীজ শোধন করে বপন করতে হবে। \n -সুষম সার প্রয়োগ, সেচ ও জমির আগাছা দমন করতে হবে। \n -আগাম চাষ অর্থাৎ নভেম্বরের প্রথম সপ্তাহে বীজ বপন করলে রোগের মাত্রা কম হবে। \n -রোগ দেখা দেয়ার সাথে সাথে প্রোপিকোনাজোল (টিল্ট ২৫০ ইসি) প্রতি লিটার পানিতে ০.৫ মিলি হারে অথবা টেবুকোনাজল (ফলিকুর ২৫০ ইসি) প্রতি লিটার পানিতে ১ মিলি হারে মিশিয়ে ১০ দিন পর পর ২-৩ বার স্প্রে করতে হবে।
     </string>
+    <string name="add_product">Add Product</string>
 
 
 </resources>
