--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Adunik_Krishi</string>
+    <string name="app_name">আধুনিক কৃষি</string>
 
     <string name="open">Open</string>
     <string name="close">Close</string>
@@ -15,16 +15,9 @@
        <b> রোগের নামঃ</b> \n
 ধানের বাদামী রোগ Brown Spot Disease (Helminthosporium oryzae) \n
 <b> লক্ষণঃ </b>\n
-        	এটি বীজ বাহিত রোগ।
-	এ রোগ পাতা, বীজ ও বাড়ন্ত কান্ডে আক্রমণ করে।
-	পাতায় ডিম্বকৃতির মতে ছোট ছোট বাদামী রঙের দাগ পড়ে।
-	দাগগুলি ক্রমেই পাতায় ছড়িয়ে পড়ে , আক্রমণ বেশী হলে শীষেও আক্রমন হয়। \n
-
-<b> সমন্বিত দমন ব্যবস্থাপনাঃ</b>  v
-ফসল কাটার পর নাড়া পুড়িয়ে ফেলা। সুস্থ বীজ ব্যবহার করা। বীজ গরম পানিতে শোধন করা বা প্রোভেবা ভিটাফ্লো ২০০ (২.৫-৩ গ্রাম/কেজি বীজ) দ্বারা বীজ শোধন।
-রোগ প্রতিরোধ সম্পন্ন জাত ব্যবহার। বীজতলা বা জমি সব সময় ভেজা রাখা। জমিতে পর্যাপ্ত পরিমাণ ইউরিয়া ও পটাশ ব্যবহার করলে রোগ বাড়ে না।
+        	এটি বীজ বাহিত রোগ। 	এ রোগ পাতা, বীজ ও বাড়ন্ত কান্ডে আক্রমণ করে। 	পাতায় ডিম্বকৃতির মতে ছোট ছোট বাদামী রঙের দাগ পড়ে। 	দাগগুলি ক্রমেই পাতায় ছড়িয়ে পড়ে , আক্রমণ বেশী হলে শীষেও আক্রমন হয়। \n <b> সমন্বিত দমন ব্যবস্থাপনাঃ</b>  v
+        ফসল কাটার পর নাড়া পুড়িয়ে ফেলা। সুস্থ বীজ ব্যবহার করা। বীজ গরম পানিতে শোধন করা বা প্রোভেবা ভিটাফ্লো ২০০ (২.৫-৩ গ্রাম/কেজি বীজ) দ্বারা বীজ শোধন। রোগ প্রতিরোধ সম্পন্ন জাত ব্যবহার। বীজতলা বা জমি সব সময় ভেজা রাখা। জমিতে পর্যাপ্ত পরিমাণ ইউরিয়া ও পটাশ ব্যবহার করলে রোগ বাড়ে না।
     </string>
-
 
     <string name="dan_tonkrorRog"> <b>  রোগের নামঃ </b>
         \n
@@ -91,6 +84,7 @@
       <b> \n  রোগের প্রতিকার </b>
  -ফসল সংগ্রহের পর ফসলের পরিত্যক্ত অংশ পৃড়িয়ে ফেলতে হবে অথবা মাটিতে পুতে রাখতে হবে। \n -রোগ প্রতিরোধী জাত চাষ করতে হবে। \n -কার্বেন্ডাজিম (অটোস্টিন) অথবা কার্বোক্সিন + থিরাম (প্রোভ্যাক্স ২০০ ডব্লিউপি) প্রতি কেজি বীজে ২.৫ গ্রাম হারে মিশিয়ে বীজ শোধন করে বপন করতে হবে। \n -সুষম সার প্রয়োগ, সেচ ও জমির আগাছা দমন করতে হবে। \n -আগাম চাষ অর্থাৎ নভেম্বরের প্রথম সপ্তাহে বীজ বপন করলে রোগের মাত্রা কম হবে। \n -রোগ দেখা দেয়ার সাথে সাথে প্রোপিকোনাজোল (টিল্ট ২৫০ ইসি) প্রতি লিটার পানিতে ০.৫ মিলি হারে অথবা টেবুকোনাজল (ফলিকুর ২৫০ ইসি) প্রতি লিটার পানিতে ১ মিলি হারে মিশিয়ে ১০ দিন পর পর ২-৩ বার স্প্রে করতে হবে।
     </string>
+
     <string name="add_product">Add Product</string>
 
 
