add market update

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,6 +85,48 @@
  -ফসল সংগ্রহের পর ফসলের পরিত্যক্ত অংশ পৃড়িয়ে ফেলতে হবে অথবা মাটিতে পুতে রাখতে হবে। \n -রোগ প্রতিরোধী জাত চাষ করতে হবে। \n -কার্বেন্ডাজিম (অটোস্টিন) অথবা কার্বোক্সিন + থিরাম (প্রোভ্যাক্স ২০০ ডব্লিউপি) প্রতি কেজি বীজে ২.৫ গ্রাম হারে মিশিয়ে বীজ শোধন করে বপন করতে হবে। \n -সুষম সার প্রয়োগ, সেচ ও জমির আগাছা দমন করতে হবে। \n -আগাম চাষ অর্থাৎ নভেম্বরের প্রথম সপ্তাহে বীজ বপন করলে রোগের মাত্রা কম হবে। \n -রোগ দেখা দেয়ার সাথে সাথে প্রোপিকোনাজোল (টিল্ট ২৫০ ইসি) প্রতি লিটার পানিতে ০.৫ মিলি হারে অথবা টেবুকোনাজল (ফলিকুর ২৫০ ইসি) প্রতি লিটার পানিতে ১ মিলি হারে মিশিয়ে ১০ দিন পর পর ২-৩ বার স্প্রে করতে হবে।
     </string>
 
+    <!-- pat chas -->
+
+    <string name="pat_chas">
+
+        <b> পাট চাষ ব্যবস্থাপনা </b> \n
+<b> মৌসুম: </b>
+পাট উৎপাদন মৌসুম (বপন থেকে পাট কাটা) হচ্ছে ফাল্গুনের শেষ থেকে আষাঢ়ের শেষ পর্যন্ত।
+জাত : আঁশ ফসলের জন্য চার ধরনের পাট রয়েছে। দেশী পাট, তোষা পাট, কেনাফ ও মেস্তা পাট। এদের অনত্মর্ভূক্ত আধুনিক উফসী যে সব জাত রয়েছে- তাদের সংক্ষিপ্ত পরিচিতি নিম্নরূপ:
+<b>১. দেশী পাট</b> \n
+ক্রমিক নং  ফসল/জাত             বপন সময়              জীবনকাল (দিন)    ফলন (টন/হেক্টর)
+১           সিসি-৪৫                       ৩০ ফাল্গুন-৩০ চৈত্র       ১৩৫-১৬০ দিন        ৫.১৬
+২           বিজেআরআই দেশী পাট-৫    ১ চৈত্র-১ বৈশাখ          ১০৫-১১৫ দিন        ৩.২৫
+৩          বিজেআরআই দেশী পাট-৬    ১৫ চৈত্র-১৫ বৈশাখ       ৯৫-১০০ দিন        ৩.০০
+৪          বিজেআরআই দেশী পাট-৭     ১৫ চৈত্র-১৫ বৈশাখ        ১০০-১১০            ৩.০০
+৫          বিনা দেশী পাট-২              ২০ ফাল্গুন-২০ চৈত্র            -                       ৩.০০
+        <b> ২. তোষা পাট </b> \n
+ক্রমিক নং   ফসল/জাত               বপন সময়           জীবনকাল (দিন)    ফলন (টন/হেক্টর)
+১              ও-৯৮৯৭                  ১ চৈত্র-১৫ বৈশাখ         ১২৫-১৪৫ দিন          ৪.৬
+২              ওএম-১                     ২৫ ফাল্গুন-৩০ বৈশাখ    ১২৫-১৫৫ দিন          ৪.৫
+৩            বিজেআরআই দেশী পাট-৪    ১ চৈত্র-১৫ বৈশাখ       ১২০-১৪০ দিন      ৪.৮১
+<b> ৩. কেনাফ </b>  \n
+ক্রমিক নং    ফসল/জাত    বপন সময়            জীবনকাল (দিন)    ফলন (টন/হেক্টর)
+১               এইচ সি-২      ১৬ চৈত্র-১৫ বৈশাখ    ১২৫-১৫৫ দিন            ৬.৬৪
+২               এইচ সি-৯৫    ১৬ চৈত্র-৩০ চৈত্র      ১৫০-১৬০ দিন             ৫.৫
+        <b> ৪. মেস্তা </b>  \n
+
+ক্রমিক নং    ফসল/জাত    বপন সময়           জীবনকাল (দিন)    ফলন (টন/হেক্টর)
+১              এইচ এস-২৪     ১ চৈত্র-৩০ বৈশাখ      ১৮০-২১০ দিন              ৪.৭
+
+জমি তৈরিকরণঃ
+উঁচু ও মধ্যম উঁচু জমি যেখানে বৃষ্টির পানি বেশি সময় দাঁড়ায় না এবং দো-আঁশ মাটি পাট চাষের জন্য বেশি উপযোগী। বৃষ্টিপাতের পরপরই আড়াআড়ি ৫-৭ টি চাষ দিয়ে জমি তৈরি করতে হবে। ঢেলা গুড়ো করতে হবে এবং জমি আগাছামুক্ত করতে হবে।
+<b> সার প্রয়োগ : </b> ভালোভাবে প্রস্তুতকৃত জমিতে বপনের ২-৩ সপ্তাহ আগে হেক্টরপ্রতি ৩.৫ টন গোবর সার মিশিয়ে দিতে হবে। বপনের দিন \n
+১৫ কেজি ইউরিয়া
+১৭ কেজি টিএসপি ও
+২২ কেজি এমওপি সার জমিতে প্রয়োগ করতে হবে।
+অত:পর বীজ বপনের ৬-৭ সপ্তাহ পর ক্ষেতের আগাছা পরিষ্কার ও চারা পাতলা করে হেক্টরপ্রতি ১০০ কেজি ইউরিয়া সার জমিতে পুনরায় ছিটিয়ে দিতে হবে।
+বীজ বপন : সময়মত পাটবীজ বপন করা উচিত। সাধারণত: ছিটিয়েই পাটবীজ বপন করা হয়। তবে সারিতে বপন করলে পাটের ফলন বেশি হয়।
+বীজ হার : ছিটিয়ে বুনলে-৬.৫-৭.৫ কেজি/হেক্টর,     সারিতে বুনলে-৩.৫-৫.০০ কেজি/হেক্টর
+সারিতে বুনলে লাইন থেকে লাইনের দূরত্ব ৩০ সেমি বা এক ফুট এবং গাছ থেকে গাছের দূরত্ব ৭-১০ সেমি বা ৩-৪ ইঞ্চি হতে হবে।
+আগাছা দমন ও চারা পাতলাকরণ : বীজ বপনের ১৫-২১ দিনের মধ্যে ১ম নিড়ানী এবং ৩৫-৪২ দিনের মধ্যে ২য় নিড়ানী দিয়ে আগাছা দমন ও চারা পাতলা করতে হবে।
+    </string>
+
     <string name="add_product">Add Product</string>
 
 
